--- a/assets/scss/globals/_variables.scss
+++ b/assets/scss/globals/_variables.scss
@@ -30,6 +30,11 @@
 	// about image grey color
 	--grey-color: #f2f2f2;
 
+	// Input color in focus mode
+	--input-active-color: #e8f0fe;
+
+
+
 	//========== Font and typography ==========
 	// .5rem = 8px | 1rem = 16px
 	--title-font: 'Signika', sans-serif;
