--- a/assets/scss/components/sections/_about.scss
+++ b/assets/scss/components/sections/_about.scss
@@ -47,6 +47,9 @@
 				@include mediaLG {
 					font-size: 18px;
 				}
+				@include mediaXLG {
+					margin-left: 0;
+				}
 				i {
 					margin-left: 8px;
 					font-size: 15px;
@@ -83,6 +86,9 @@
 					width: 580px;
 					max-width: initial;
 					height: 400px;
+				}
+				@include mediaXLG {
+					height: initial;
 				}
 			}
 		}
