--- a/assets/scss/pages/_connexion.scss
+++ b/assets/scss/pages/_connexion.scss
@@ -5,12 +5,12 @@
 		font-size: 36px;
 		margin-top: 0;
 		@include mediaMD {
-			font-size: 50px;
+			font-size: 42px;
 		}
 		@include mediaLG {
 			text-align: start;
 			width: initial;
-			font-size: 54px;
+			font-size: 48px;
 			margin-bottom: 0;
 			&::after,
 			&::before {
@@ -33,6 +33,12 @@
 			@include mediaMD {
 				width: 480px;
 			}
+			@include mediaLG {
+				width: -webkit-fill-available;
+			}
+			@include mediaXLG {
+				width: 480px;
+			}
 			.connexion__form {
 				margin-top: 75px;
 				@include mediaLG {
@@ -41,18 +47,21 @@
 				.input__container {
 					display: flex;
 					flex-direction: column-reverse;
-					margin-bottom: 30px;
+					margin-bottom: 25px;
+					&:last-of-type {
+						border-color: blue;
+					}
 					@include mediaSM {
 						margin-bottom: 20px;
 					}
 					@include mediaLG {
-						margin-bottom: 25px;
+						margin-bottom: 20px;
 					}
 					label {
 						width: max-content;
 						padding-inline: 5px;
 						font-family: var(--body-font);
-						font-size: 22px;
+						font-size: 20px;
 						font-style: italic;
 						font-weight: var(--font-semi-bold);
 						text-transform: uppercase;
@@ -65,27 +74,27 @@
 							font-size: 20px;
 						}
 						@include mediaLG {
-							font-size: 22px;
+							font-size: 20px;
 						}
 					}
 					input {
-						all: unset;
 						position: relative;
-						width: 98%;
+						width: 100%;
 						top: -10px;
 						border: 2px solid #2f2e41;
 						border-radius: 5px;
 						padding-left: 15px;
 						font-size: var(--body-font);
 						font-size: 18px;
-						height: 60px;
-						transition: 200ms linear;
+						height: 55px;
+						transition: 150ms linear;
+						outline: none;
 						@include mediaSM {
 							height: 55px;
 						}
 						@include mediaLG {
-							height: 65px;
-							font-size: 20px;
+							height: 60px;
+							font-size: 18px;
 						}
 						&:is(:focus) {
 							border-color: var(--first-color-base);
@@ -109,7 +118,7 @@
 					[type='checkbox']:checked + label,
 					[type='checkbox']:not(:checked) + label {
 						position: relative;
-						padding-left: 35px;
+						padding-left: 30px;
 						cursor: pointer;
 						line-height: 20px;
 						display: inline-block;
@@ -151,22 +160,19 @@
 					}
 					// ====== END CHANGE ALL THE CHECKBOX DESIGN ============
 					label {
-						font-size: 20px;
+						font-size: 16px;
 						font-family: var(--body-font);
 						text-transform: uppercase;
 						@include mediaSM {
 							font-size: 16px;
 						}
-						@include mediaLG {
-							font-size: 20px;
-						}
 					}
 				}
 				.connexion__form-btn {
 					width: 100%;
-					height: 57px;
-					margin-top: 45px;
-					font-size: 20px;
+					height: 55px;
+					margin-top: 35px;
+					font-size: 18px;
 					font-family: var(--body-font);
 					font-weight: var(--font-semi-bold);
 					text-transform: uppercase;
@@ -188,14 +194,15 @@
 				margin-top: 45px;
 				@include mediaLG {
 					margin-top: 70px;
-					row-gap: 20px;
+					row-gap: 5px;
 				}
 				.connexion__link {
 					font-family: var(--body-font);
-					font-size: 16px;
+					font-size: 15px;
 					text-align: center;
 					text-transform: uppercase;
 					transition: 150ms linear;
+					padding-block: 8px;
 					@include mediaSM {
 						text-align: start;
 						&:hover {
@@ -203,7 +210,7 @@
 						}
 					}
 					@include mediaLG {
-						font-size: 20px;
+						font-size: 16px;
 						&:hover {
 							color: var(--first-color-dark);
 						}
@@ -291,7 +298,7 @@
 		@include mediaSM {
 			margin-top: 60px;
 		}
-		@include mediaLG {
+		@include mediaMD {
 			display: none;
 		}
 		.section__title {
